2021. 5. 9. Modified specification of zBDisk2D. [zeo_bv2d_bdisk]
2021. 5. 9. Modified specification of zVec2DAddrListCreate. [zeo_vec2d_list]
2021. 5. 9. Modified specification of zBBall3D. [zeo_bv3d_bball]
2021. 5. 9. Modified specification of _zPH3DSweepBottom, zPH3DPrism and zPH3DPyramid. [zeo_ph]
2021. 5. 9. Modified specification of zTriangulate. [zeo_elem3d_list]
2021. 5. 9. Modified specification of zVec3DAddrListCreate and zLoop3DCreate. [zeo_vec3d_list, zeo_elem3d_list]
2021. 5. 9. Added zVec3DAddrListAppendArray. [zeo_vec3d_list]
2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
2021. 5. 7. Made tools/, and modified makefiles. [makefile, app, tools]
2021. 5. 7. Renamed zBDisk to zBDisk2D. [zeo_bv2d_bdisk]
2021. 5. 7. Renamed zBBall* to zBBall3D*. [zeo_bv3d_bball, zeo_mshape3d]
2021. 5. 7. Renamed zAABB* to zAABB3D*. [zeo_bv3d_aabb, zeo_col_box]
2021. 5. 6. Modified zBBall and zBBallPL to compute the actual radius without a margin. [zeo_bv3d_bball]
2021. 5. 6. Debugged _zBBall4. [zeo_bv3d_bball]
2021. 5. 6. Reimplemented _zBBallTest? and _zBBallPrim with zSphere3DFrom?. [zeo_bv3d_bball]
2021. 5. 6. Added zSphere3DFrom2, zSphere3DFrom3 and zSphere3DFrom4. [zeo_shape3d_sphere]
2021. 5. 6. Implemented zBDisk and zBDiskPL. [zeo_bv2d, zeo_bv2d_bdisk]
2021. 5. 6. Added zDisk2DFrom2 and zDisk2DFrom3. [zeo_elem2d]
2021. 5. 6. Added zDisk2D class. [zeo_elem2d]
2021. 5. 6. Added zTri2DBarycenter, zTri2DCircumcenter, zTri2DIncenter and zTri2DOrthocenter. [zeo_elem2d]
2021. 5. 6. Added zeo_vec2d_list. [zeo_vec2d, zeo_vec2d_list]
2021. 5. 6. Added ZVEC2DZERO, ZVEC2DX and ZVEC2DY. [zeo_vec2d]
2021. 5. 6. Modified _zBBallInc. [zeo_bv3d_bball]
2021. 5. 6. Renamed zBBallPL to _zBBallPL, and newly created zBBallPL to reduce the risk of stack-overflow. [zeo_bv3_bball]
2021. 5. 6. Defined ZEO_BBALL_PN_THRESHOLD. [zeo_bv3_bball]
2021. 5. 5. Debugged zMShape3DBBall. [zeo_mshape3d]
2021. 5. 5. Added zMShape3DVertList and zMShape3DBBall. [zeo_mshape3d]