@@ -1,40 +1,43 @@
 #include <zeo/zeo.h>
 
 #define N 100
-zVec3D v[N];
 
-void veclist_create_rand(void)
+void veclist_create_rand(zVec3DList *pl)
 {
   register int i;
   FILE *fp;
+  zVec3D v;
 
+  zListInit( pl );
   fp = fopen( "src", "w" );
   for( i=0; i<N; i++ ){
-    zVec3DCreate( &v[i], zRandF(-5,5), zRandF(-5,5), zRandF(-5,5) );
-    zVec3DDataNLFPrint( fp, &v[i] );
+    zVec3DCreate( &v, zRandF(-5,5), zRandF(-5,5), zRandF(-5,5) );
+    zVec3DListAdd( pl, &v );
+    zVec3DDataNLFPrint( fp, &v );
   }
   fclose( fp );
 }
 
-void verify(zAABox3D *bb, zVec3D **vp)
+void verify(zAABox3D *bb, zVec3DList *pl, zVec3DListCell **vp)
 {
   register int i;
   bool ret;
   zBox3D box;
   zVec3D vert;
   FILE *fp;
+  zVec3DListCell *pc;
 
   zAABox3DToBox3D( bb, &box );
-  for( i=0; i<N; i++ ){
-    if( ( ret = zBox3DPointIsInside(&box,&v[i],true) ) == false ){
-      zVec3DDataNLFPrint( stderr, &v[i] );
-      eprintf( "D=%.15g\n", zBox3DPointDist(&box,&v[i]) );
+  zListForEach( pl, pc ){
+    if( ( ret = zBox3DPointIsInside(&box,pc->data,true) ) == false ){
+      zVec3DDataNLFPrint( stderr, pc->data );
+      eprintf( "D=%.15g\n", zBox3DPointDist(&box,pc->data) );
     }
   }
   /* points on the walls */
   fp = fopen( "bd", "w" );
   for( i=0; i<6; i++ )
-    zVec3DDataNLFPrint( fp, vp[i] );
+    zVec3DDataNLFPrint( fp, vp[i]->data );
   fclose( fp );
   /* AABB */
   fp = fopen( "aabb", "w" );
@@ -57,11 +60,13 @@ void verify(zAABox3D *bb, zVec3D **vp)
 int main(void)
 {
   zAABox3D bb;
-  zVec3D *vp[6];
+  zVec3DListCell *vp[6];
+  zVec3DList pl;
 
   zRandInit();
-  veclist_create_rand();
-  zAABB( &bb, v, N, vp );
-  verify( &bb, vp );
+  veclist_create_rand( &pl );
+  zAABB3DPL( &bb, &pl, vp );
+  verify( &bb, &pl, vp );
+  zVec3DListDestroy( &pl );
   return 0;
 }
