@@ -3,31 +3,20 @@
 #define N 100
 zVec3D v[N];
 
-void frame_create_rand(zFrame3D *f)
-{
-  zVec3D aa;
-
-  zVec3DCreate( zFrame3DPos(f), zRandF(-5,5), zRandF(-5,5), zRandF(-5,5) );
-  zVec3DCreate( &aa, zRandF(-zPI,zPI), zRandF(-zPI,zPI), zRandF(-zPI,zPI) );
-  zMat3DFromAA( zFrame3DAtt(f), &aa );
-}
-
-void veclist_create_rand(zFrame3D *f)
+void veclist_create_rand(void)
 {
   register int i;
   FILE *fp;
-  zVec3D vert;
 
   fp = fopen( "src", "w" );
   for( i=0; i<N; i++ ){
     zVec3DCreate( &v[i], zRandF(-5,5), zRandF(-5,5), zRandF(-5,5) );
-    zXform3D( f, &v[i], &vert );
-    zVec3DDataNLFPrint( fp, &vert );
+    zVec3DDataNLFPrint( fp, &v[i] );
   }
   fclose( fp );
 }
 
-void verify(zAABox3D *bb, zFrame3D *f)
+void verify(zAABox3D *bb, zVec3D **vp)
 {
   register int i;
   bool ret;
@@ -37,12 +26,16 @@ void verify(zAABox3D *bb, zFrame3D *f)
 
   zAABox3DToBox3D( bb, &box );
   for( i=0; i<N; i++ ){
-    zXform3D( f, &v[i], &vert );
-    if( ( ret = zBox3DPointIsInside(&box,&vert,true) ) == false ){
-      zVec3DDataNLFPrint( stderr, &vert );
-      eprintf( "D=%.15g\n", zBox3DPointDist(&box,&vert) );
+    if( ( ret = zBox3DPointIsInside(&box,&v[i],true) ) == false ){
+      zVec3DDataNLFPrint( stderr, &v[i] );
+      eprintf( "D=%.15g\n", zBox3DPointDist(&box,&v[i]) );
     }
   }
+  /* points on the walls */
+  fp = fopen( "bd", "w" );
+  for( i=0; i<6; i++ )
+    zVec3DDataNLFPrint( fp, vp[i] );
+  fclose( fp );
   /* AABB */
   fp = fopen( "aabb", "w" );
   for( i=0; i<4; i++ )
@@ -64,12 +57,11 @@ void verify(zAABox3D *bb, zFrame3D *f)
 int main(void)
 {
   zAABox3D bb;
-  zFrame3D f;
+  zVec3D *vp[6];
 
   zRandInit();
-  frame_create_rand( &f );
-  veclist_create_rand( &f );
-  zAABBXform( &bb, v, N, &f );
-  verify( &bb, &f );
+  veclist_create_rand();
+  zAABB3D( &bb, v, N, vp );
+  verify( &bb, vp );
   return 0;
 }
