@@ -1,44 +1,48 @@
 #include <zeo/zeo.h>
 
 #define N 100
+zVec3D v[N];
 
-void veclist_create_rand(zVec3DList *pl)
+void frame_create_rand(zFrame3D *f)
+{
+  zVec3D aa;
+
+  zVec3DCreate( zFrame3DPos(f), zRandF(-5,5), zRandF(-5,5), zRandF(-5,5) );
+  zVec3DCreate( &aa, zRandF(-zPI,zPI), zRandF(-zPI,zPI), zRandF(-zPI,zPI) );
+  zMat3DFromAA( zFrame3DAtt(f), &aa );
+}
+
+void veclist_create_rand(zFrame3D *f)
 {
   register int i;
   FILE *fp;
-  zVec3D v;
+  zVec3D vert;
 
-  zListInit( pl );
   fp = fopen( "src", "w" );
   for( i=0; i<N; i++ ){
-    zVec3DCreate( &v, zRandF(-5,5), zRandF(-5,5), zRandF(-5,5) );
-    zVec3DListAdd( pl, &v );
-    zVec3DDataNLFPrint( fp, &v );
+    zVec3DCreate( &v[i], zRandF(-5,5), zRandF(-5,5), zRandF(-5,5) );
+    zXform3D( f, &v[i], &vert );
+    zVec3DDataNLFPrint( fp, &vert );
   }
   fclose( fp );
 }
 
-void verify(zAABox3D *bb, zVec3DList *pl, zVec3DListCell **vp)
+void verify(zAABox3D *bb, zFrame3D *f)
 {
   register int i;
   bool ret;
   zBox3D box;
   zVec3D vert;
   FILE *fp;
-  zVec3DListCell *pc;
 
   zAABox3DToBox3D( bb, &box );
-  zListForEach( pl, pc ){
-    if( ( ret = zBox3DPointIsInside(&box,pc->data,true) ) == false ){
-      zVec3DDataNLFPrint( stderr, pc->data );
-      eprintf( "D=%.15g\n", zBox3DPointDist(&box,pc->data) );
+  for( i=0; i<N; i++ ){
+    zXform3D( f, &v[i], &vert );
+    if( ( ret = zBox3DPointIsInside(&box,&vert,true) ) == false ){
+      zVec3DDataNLFPrint( stderr, &vert );
+      eprintf( "D=%.15g\n", zBox3DPointDist(&box,&vert) );
     }
   }
-  /* points on the walls */
-  fp = fopen( "bd", "w" );
-  for( i=0; i<6; i++ )
-    zVec3DDataNLFPrint( fp, vp[i]->data );
-  fclose( fp );
   /* AABB */
   fp = fopen( "aabb", "w" );
   for( i=0; i<4; i++ )
@@ -60,13 +64,12 @@ void verify(zAABox3D *bb, zVec3DList *pl, zVec3DListCell **vp)
 int main(void)
 {
   zAABox3D bb;
-  zVec3DListCell *vp[6];
-  zVec3DList pl;
+  zFrame3D f;
 
   zRandInit();
-  veclist_create_rand( &pl );
-  zAABBPL( &bb, &pl, vp );
-  verify( &bb, &pl, vp );
-  zVec3DListDestroy( &pl );
+  frame_create_rand( &f );
+  veclist_create_rand( &f );
+  zAABB3DXform( &bb, v, N, &f );
+  verify( &bb, &f );
   return 0;
 }
